First set of packages and MFHarticle class

--- a/tex/latex/mfh/MFHtheoremdefs.sty
+++ b/tex/latex/mfh/MFHtheoremdefs.sty
@@ -1,3 +1,20 @@
+% 
+% Package for theorem definitions mfh typically uses
+% Defines:
+%   thm -> Theorem
+%   lem -> Lemma
+%   prop -> Proposition
+%   cor  -> Corollary
+%   defn -> Definition
+%   exmp -> Example
+%   rem  -> Remark
+%   ex   -> Exercise
+%   nte  -> Note
+%
+% Options:
+%  book -> uses setup for a book
+%
+
 \NeedsTeXFormat{LaTeX2e}
 
 % update when new stuff added
@@ -45,3 +62,5 @@
 
 \theoremstyle{remark}
 \newtheorem*{nte}{Note}
+
+\endinput
