Add important abbreviations

--- a/mfh/MFHabbr.sty
+++ b/mfh/MFHabbr.sty
@@ -47,9 +47,15 @@
 %-- Abbreviations --%
 %%%%%%%%%%%%%%%%%%%%%
 
-\defineabbr{ie}{\mbox{i.~e.}\xspace}{\textit{id est}}
+\defineabbr{ie}{\mbox{i.e.}\xspace}{\textit{id est}}
 \defineabbr{fig}{\abbr{fig}{e}\xspace}{figure}
 \defineabbr{eqn}{\abbr{eq}{n}\xspace}{equation}
+\defineabbr{etc}{etc.\xspace}{\textit{et cetera}}
+\defineabbr{eg}{\mbox{e.g.}\xspace}{\textit{exempli gratia}}
+
+% Captialised versions
+\newcommand{\Eg}{\mbox{E.g.}\xspace}
+\newcommand{\Ie}{\mbox{I.e.}\xspace}
 
 \endinput
 
