Minor changes in terminal style
No line numbers
Show tabs if they occur

--- a/mfh/MFHcode.sty
+++ b/mfh/MFHcode.sty
@@ -98,9 +98,11 @@
 	frame=single,               % have a border frame
 	framerule=1pt,              % width of the rule
 	escapeinside={},            % no latex inside
+	numbers=none,
 	commentstyle=\color{black}, % black comments
 	stringstyle=\color{black},  % black strings
 	keywordstyle=\color{black}, % black keywords
+	showtabs=true,
 }
 
 \lstdefinestyle{awk}{%
