\coutp explicitly sets empty language

--- a/mfh/MFHcode.sty
+++ b/mfh/MFHcode.sty
@@ -143,7 +143,7 @@
 %--  output  --%
 %%%%%%%%%%%%%%%%
 % command to insert output inline
-\newcommand{\coutp}{\lstinline[basicstyle=\ttfamily,postbreak={},prebreak={},showspaces=true,showtabs=true]}
+\newcommand{\coutp}{\lstinline[language={},basicstyle=\ttfamily,postbreak={},prebreak={},showspaces=true,showtabs=true]}
 % command to load output from a file
 \newcommand{\loadoutput}{\lstinputlisting[title=\lstname,style=output]}
 % command to load output from file without a title
