--- a/mfh/MFHcolours.sty
+++ b/mfh/MFHcolours.sty
@@ -6,7 +6,7 @@
 \NeedsTeXFormat{LaTeX2e}
 
 % update when new stuff added
-\ProvidesPackage{MFHcolors}[2016/08/02]
+\ProvidesPackage{MFHcolours}[2016/08/02]
 
 %
 % Required packages
