--- a/mfh/MFHabbr.sty
+++ b/mfh/MFHabbr.sty
@@ -52,6 +52,7 @@
 \defineabbr{eqn}{\abbr{eq}{n}\xspace}{equation}
 \defineabbr{etc}{etc.\xspace}{\textit{et cetera}}
 \defineabbr{eg}{\mbox{e.g.}\xspace}{\textit{exempli gratia}}
+\defineabbr{cf}{\mbox{cf.}\xspace}{\textit{confer}}
 
 % Captialised versions
 \newcommand{\Eg}{\mbox{E.g.}\xspace}
