Make iwr colours a separate package

--- a/beamer/themes/theme/beamerthemeMFHiwr.sty
+++ b/beamer/themes/theme/beamerthemeMFHiwr.sty
@@ -22,6 +22,7 @@
 
 \mode<presentation>
 
+\usepackage{IWRcolours} % defines the colours of the color theme
 \useinnertheme{rounded}
 \useoutertheme{miniframes}
 \usecolortheme{MFHiwr}				% tha adopted IWR color theme
