Use T1 and lmodern by default

--- a/mfh/MFHdefault.sty
+++ b/mfh/MFHdefault.sty
@@ -23,6 +23,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Font, alignment and layout
 %
+\usepackage[T1]{fontenc}  % Use T1 font encoding
+\usepackage{lmodern}      % More modern computer-modern replacement font
+			%
 \usepackage{pdflscape}  % for rotating individual pages using
 			% environment landscape
 \usepackage{relsize}	%Adjust font size relatively using the commands \larger, \smaller, \relsize, .. ..
