Make mfhIWR beamer theme work

--- a/beamer/themes/theme/beamerthemeMFHiwr.sty
+++ b/beamer/themes/theme/beamerthemeMFHiwr.sty
@@ -34,8 +34,8 @@
 \beamertemplatenavigationsymbolsempty		% remove navigation symbols
 
 %include iwr logo:
-\pgfdeclareimage[height=0.7cm]{IwrLogo}{img/HD/logoIWR}
-\pgfdeclareimage[height=0.7cm]{UniLogo}{img/HD/logoUni}
+\pgfdeclareimage[height=0.7cm]{IwrLogo}{iwr/logoIWR}
+\pgfdeclareimage[height=0.7cm]{UniLogo}{iwr/logoUniHD}
 \logo{\pgfuseimage{UniLogo}\hspace{0.2cm}\pgfuseimage{IwrLogo}\hspace{0.2cm}\:}
 
 \mode<all>
