Add more arg functions

--- a/mfh/MFHscience.sty
+++ b/mfh/MFHscience.sty
@@ -84,11 +84,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Extra operators and functions:
 %
-% Take the argmax
+% Take the argmin, argmax \ldots
 \DeclareMathOperator*{\argmax}{arg\,max}
-%
-% Take the argmin
 \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\arginf}{arg\,inf}
+\DeclareMathOperator*{\argsup}{arg\,sup}
 %
 % The sign function
 \DeclareMathOperator{\sgn}{sgn}
