Increase contrast in beamer boxes

--- a/beamer/themes/color/beamercolorthemeMFHiwr.sty
+++ b/beamer/themes/color/beamercolorthemeMFHiwr.sty
@@ -33,12 +33,12 @@
 \setbeamercolor{palette tertiary}{use={palette primary},fg=palette primary.fg!85!black,bg=palette primary.bg!60!white}
 \setbeamercolor{palette quaternary}{use={palette primary},fg=palette primary.fg,bg=palette primary.bg!50!white}
 
-\setbeamercolor{block body alerted}{use={palette primary},bg=palette primary.bg}
-\setbeamercolor{block body}{use={palette primary},bg=palette primary.bg}
-\setbeamercolor{block body example}{use={palette primary},bg=palette primary.bg}
-\setbeamercolor{block title alerted}{use={palette primary,alerted text},fg=alerted text.fg!85!normal text.fg,bg=palette primary.bg!97!black}
-\setbeamercolor{block title}{use={normal text,palette primary},fg=normal text.fg!80!black,bg=palette primary.bg!97!black}
-\setbeamercolor{block title example}{use={palette primary,example text},fg=example text.fg!85!normal text.fg,bg=palette primary.bg!97!black}
+\setbeamercolor{block body alerted}{use={palette primary},bg=palette primary.bg!30!white}
+\setbeamercolor{block body}{use={palette primary},bg=palette primary.bg!30!white}
+\setbeamercolor{block body example}{use={palette primary},bg=palette primary.bg!30!white}
+\setbeamercolor{block title alerted}{use={palette primary,alerted text},fg=alerted text.fg,bg=palette primary.bg!75!white}
+\setbeamercolor{block title}{use={normal text,palette primary},fg=IwrBlue, bg=palette primary.bg!75!white}
+\setbeamercolor{block title example}{use={palette primary,example text},fg=example text.fg,bg=palette primary.bg!75!white}
 
 \setbeamercolor{page number in head/foot}{use=structure,fg=structure.fg}
 \setbeamercolor*{titlelike}{parent=palette primary}
