Add more colors (including dvips standard)

--- a/mfh/MFHcolours.sty
+++ b/mfh/MFHcolours.sty
@@ -11,7 +11,7 @@
 %
 % Required packages
 %
-\usepackage{xcolor}
+\usepackage[dvipsnames]{xcolor}
 
 %
 % Parse options
@@ -38,5 +38,7 @@
 \definecolor{fuchsia}{rgb}{1.0,0,1.0}
 \definecolor{dkfuchsia}{rgb}{0.80,0,0.88}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{dkred}{rgb}{0.6,0,0}
+\definecolor{dkblue}{rgb}{0,0.0,0.6}
 
 \endinput
