Add python code style

--- a/mfh/MFHcode.sty
+++ b/mfh/MFHcode.sty
@@ -138,6 +138,11 @@
 	language={awk}, 	% standard awk
 }
 
+\lstdefinestyle{python}{%
+	style=default,		% copy from default style
+	language={python}, 	% standard python
+}
+
 \lstdefinestyle{plain}{%  plain text files
 	style=default,		% copy from default style
 	language={},		% no language
