Add field \F command

--- a/mfh/MFHscience.sty
+++ b/mfh/MFHscience.sty
@@ -169,6 +169,7 @@
 \newcommand{\R}{\set{R}}
 \newcommand{\N}{\set{N}}
 \newcommand{\C}{\set{C}}
+\newcommand{\F}{\set{F}}
 %
 % Disjoint unions, once as binary operator (\cupdot)
 % and once as big symbol (\bigcupdot)
