Add identity operator

--- a/mfh/MFHscience.sty
+++ b/mfh/MFHscience.sty
@@ -98,6 +98,9 @@
 %
 % Take the diagonal
 \DeclareMathOperator*{\diag}{diag}
+%
+% The identity operator
+\DeclareMathOperator{\id}{id}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Analysis
