Make remark styled like a definition

--- a/mfh/MFHtheoremdefs.sty
+++ b/mfh/MFHtheoremdefs.sty
@@ -64,7 +64,7 @@
 	{.5em} % space after theory head
 	{} % theorem head spec (empty is normal)
 
-\newtheoremstyle{remark}
+\newtheoremstyle{note}
 	{\parskip} % space above
 	{} % space below
 	{\normalfont} % body font
@@ -93,9 +93,9 @@
 \newtheorem{defn}[thm]{Definition}
 \newtheorem{exmp}[thm]{Example}
 \newtheorem{ex}[thm]{Exercise}
-
-\theoremstyle{remark}
 \newtheorem{rem}[thm]{Remark}
+
+\theoremstyle{note}
 \newtheorem*{nte}{Note}
 
 \endinput
