Use standard unsorted bibtex style

--- a/examples/MFHposter.tex
+++ b/examples/MFHposter.tex
@@ -104,7 +104,7 @@ int main() {
 \end{posterbox}
 
 \begin{posterbox}[name=references,column=1,above=bottom]{References}
-\bibliographystyle{abbrv_unsrt_nat}
+\bibliographystyle{unsorted}
 \vspace{-1.0em}
 \smaller[2]
 
