Add span command

--- a/mfh/MFHscience.sty
+++ b/mfh/MFHscience.sty
@@ -99,6 +99,9 @@
 % Take the diagonal
 \DeclareMathOperator*{\diag}{diag}
 %
+% The span
+\DeclareMathOperator{\spacespan}{span}
+%
 % The identity operator
 \DeclareMathOperator{\id}{id}
 
