Add slot command

--- a/mfh/MFHscience.sty
+++ b/mfh/MFHscience.sty
@@ -129,6 +129,9 @@
 %
 % Landau Big O notation:
 \newcommand{\bigO}{\ensuremath{\mathcal{O}}}
+%
+% Slots for operators or functions
+\newcommand{\slot}{\,\cdot\,}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Linear algebra
