--- a/mfh/MFHcode.sty
+++ b/mfh/MFHcode.sty
@@ -100,7 +100,7 @@
 \if@poster
 	\lstdefinestyle{default}{ %
 		style=base,
-		basicstyle={\small\smaller\ttfamily},
+		basicstyle={\small\smaller[1.5]\ttfamily},
 	}
 \else
 	\lstdefinestyle{default}{ %
