--- a/mfh/MFHscience.sty
+++ b/mfh/MFHscience.sty
@@ -104,6 +104,11 @@
 %
 % The identity operator
 \DeclareMathOperator{\id}{id}
+%
+% Special functions
+\DeclareMathOperator{\erf}{erf}
+\DeclareMathOperator{\erfc}{erfc}
+\DeclareMathOperator{\sinc}{sinc}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Analysis
